# leptos-axum-test

./: Cargo.toml  README.md  tailwind.config.js
src/: app.rs  lib.rs  main.rs
src/components/: test_component.rs
